--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
 
       - run: python -m pip install mypy
 
-      - run: python -m mypy rgx/*.py
+      - run: python -m mypy rgx/*.py --disallow-any-expr --enable-recursive-aliases
 
   run-tests:
     runs-on: ubuntu-latest
