--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,11 @@ on:
   push:
     branches:
       - lord
+    paths:
+      - "**.py"
   pull_request:
-
+    paths:
+      - "**.py"
 jobs:
   check_types:
     runs-on: ubuntu-latest
@@ -41,7 +44,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - run: python -m pip install pytest
+      - run: python -m pip install pytest regex
 
       - name: Test
         run: python -m pytest test/
