--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "rgx"
-version = "1.4.1"
+version = "1.4.2"
 description = "Typed, simple and readable regexp generation"
 authors = ["Dmitry Gritsenko <rgx@evtn.ru>"]
 license = "MIT"
@@ -17,6 +17,7 @@ python = "^3.7"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 mypy = "^1.4.1"
+coveralls = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
