--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,6 @@ jobs:
         run: poetry run coverage run --include "rgx/*" -m pytest test/
 
       - name: Coveralls Update
-        run: coveralls --service=github
+        run: poetry run coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
