--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ python = "^3.7"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 mypy = "^1.4.1"
-coveralls = "^3.3.1"
+coverage = "^7.2.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
